<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data_activity">

    <TextView
        android:id="@+id/textView2"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginEnd="@dimen/large_gap"
        android:gravity="center"
        android:text="@string/confirm_data_txt"
        app:layout_constraintBottom_toTopOf="@+id/name_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_txt"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginEnd="32dp"
        android:text="@string/name_txt"
        app:layout_constraintBottom_toTopOf="@+id/email_txt"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/email_txt"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginEnd="@dimen/large_gap"
        android:text="@string/email_txt"
        app:layout_constraintBottom_toTopOf="@+id/number_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_txt" />

    <TextView
        android:id="@+id/number_txt"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginEnd="@dimen/large_gap"
        android:text="@string/Number_txt"
        app:layout_constraintBottom_toTopOf="@+id/share_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />

    <Button
        android:id="@+id/share_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/number_txt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/number_txt"
        app:layout_constraintTop_toBottomOf="@+id/number_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>