<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginEnd="@dimen/large_gap"
        android:text="@string/Title_txt"
        app:layout_constraintBottom_toTopOf="@+id/name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginEnd="@dimen/large_gap"
        android:hint="@string/Name_hint_txt"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginEnd="@dimen/large_gap"
        android:hint="@string/email_hint_txt"
        app:layout_constraintBottom_toTopOf="@+id/number_input"
        app:layout_constraintEnd_toEndOf="@+id/name_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/name_input"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_gap"
        android:layout_marginEnd="@dimen/large_gap"
        android:hint="@string/Number_hint_txt"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/save_action"
        app:layout_constraintEnd_toEndOf="@+id/email_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <Button
        android:id="@+id/save_action"
        style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/number_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/number_input"
        app:layout_constraintTop_toBottomOf="@+id/number_input" />
</androidx.constraintlayout.widget.ConstraintLayout>